--- a/clash.ini
+++ b/clash.ini
@@ -14,16 +14,16 @@ ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scri
 ruleset=➡️ 国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*`[]DIRECT
-custom_proxy_group=👽 AI1`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=👽 AI2`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=📘 GitHub`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=🙋 Telegram`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=📀 流媒体`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=🌍 国外`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=➡️ 国内`select`[]🚀 手动切换`.*`[]DIRECT
+custom_proxy_group=👽 AI1`select`[]🚀 节点选择`.*`[]DIRECT
+custom_proxy_group=👽 AI2`select`[]🚀 节点选择`.*`[]DIRECT
+custom_proxy_group=📘 GitHub`select`[]🚀 节点选择`.*`[]DIRECT
+custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 节点选择`.*`[]DIRECT
+custom_proxy_group=🙋 Telegram`select`[]🚀 节点选择`.*`[]DIRECT
+custom_proxy_group=📀 流媒体`select`[]🚀 节点选择`.*`[]DIRECT
+custom_proxy_group=🌍 国外`select`[]🚀 节点选择`.*`[]DIRECT
+custom_proxy_group=➡️ 国内`select`[]🚀 节点选择`.*`[]DIRECT
 
 ;3、节点组
 custom_proxy_group=所有-自动`url-test`.*`http://www.gstatic.com/generate_204`60,150
