--- a/clash.ini
+++ b/clash.ini
@@ -22,7 +22,7 @@ custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 手动切换`.*`[]DIRECT
 custom_proxy_group=🙋 Telegram`select`[]🚀 手动切换`.*`[]DIRECT
 custom_proxy_group=📀 流媒体`select`[]🚀 手动切换`.*`[]DIRECT
 custom_proxy_group=🌍 国外`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=➡️ 国内`select`[]🚀 手动切换`.*`[]DIRECT
+custom_proxy_group=➡️ 国内`select`[]DIRECT`[]🚀 手动切换`.*
 
 ;3、节点组
 custom_proxy_group=所有-自动`url-test`.*`http://www.gstatic.com/generate_204`60,150
