--- a/clash.ini
+++ b/clash.ini
@@ -11,7 +11,13 @@ ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_s
 ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=🌍 国外,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/Proxy.list
 ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
-ruleset=➡️ 国内,[]FINAL
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+;ruleset=🎯 全球直连,[]GEOIP,LAN
+ruleset=🎯 全球直连,[]GEOIP,CN
+ruleset=🐟 漏网之鱼,[]FINAL
+;ruleset=➡️ 国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
 custom_proxy_group=🚀 手动切换`select`.*
@@ -22,7 +28,9 @@ custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 手动切换`.*`[]DIRECT
 custom_proxy_group=🙋 Telegram`select`[]🚀 手动切换`.*`[]DIRECT
 custom_proxy_group=📀 流媒体`select`[]🚀 手动切换`.*`[]DIRECT
 custom_proxy_group=🌍 国外`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=➡️ 国内`select`[]DIRECT`[]🚀 手动切换`.*
+;custom_proxy_group=➡️ 国内`select`[]DIRECT`[]🚀 手动切换`.*
+custom_proxy_group=🎯 全球直连`[]DIRECT`[]🚀 手动切换`.*
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动切换`.*`[]DIRECT
 
 ;3、节点组
 custom_proxy_group=所有-自动`url-test`.*`http://www.gstatic.com/generate_204`60,150
