--- a/clash.ini
+++ b/clash.ini
@@ -33,7 +33,7 @@ custom_proxy_group=🙋 Telegram`select`[]🚀 手动切换`.*`[]DIRECT
 custom_proxy_group=📀 流媒体`select`[]🚀 手动切换`.*`[]DIRECT
 custom_proxy_group=🌍 国外`select`[]🚀 手动切换`.*`[]DIRECT
 ;custom_proxy_group=➡️ 国内`select`[]DIRECT`[]🚀 手动切换`.*
-custom_proxy_group=🎯 全球直连`[]🚀 手动切换`.*`[]DIRECT
+custom_proxy_group=🎯 全球直连`select`[]🚀 手动切换`.*`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动切换`.*`[]DIRECT
 
 ;3、节点组
