--- a/clash.ini
+++ b/clash.ini
@@ -32,8 +32,9 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;ruleset=➡️ 国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=🚀 手动切换`select`(223)`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]DIRECT
+custom_proxy_group=🚀 手动切换`select`[]自建节点`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=自建节点`select`[]自建节点`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=👽 AI`select`[]🚀 手动切换`.*`[]DIRECT
 custom_proxy_group=👽 AI`select`[]🚀 手动切换`.*`[]DIRECT
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 手动切换`.*`[]DIRECT
@@ -50,6 +51,7 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 手动切换`.*
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动切换`.*`[]DIRECT
 
 ;3、节点组
+custom_proxy_group=自建节点`url-test`(223|boy|223boy)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
