--- a/clash.ini
+++ b/clash.ini
@@ -32,28 +32,28 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;ruleset=➡️ 国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=🚀 手动切换`select`[]♻️ 自动选择`.*`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
+custom_proxy_group=🚀 手动切换`select`[]♻️ 自动选择``[]🇨🇳 自建节点[]`🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=👽 AI`select`[]🚀 手动切换`.*`[]DIRECT
 custom_proxy_group=👽 AI`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=🎮 游戏平台`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=📘 GitHub`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=🙋 Telegram`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=📀 流媒体`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=🌍 国外`select`[]🚀 手动切换`.*`[]DIRECT
-;custom_proxy_group=➡️ 国内`select`[]DIRECT`[]🚀 手动切换`.*
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 手动切换`.*
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动切换`.*`[]DIRECT
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 手动切换`[]DIRECT`[]♻️ 自动选择``[]🇨🇳 自建节点[]`🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 手动切换`[]DIRECT`[]♻️ 自动选择``[]🇨🇳 自建节点[]`🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=🍎 苹果服务`select`[]🚀 手动切换`[]DIRECT`[]♻️ 自动选择``[]🇨🇳 自建节点[]`🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=🎮 游戏平台`select`[]🚀 手动切换`[]DIRECT`[]♻️ 自动选择``[]🇨🇳 自建节点[]`🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=📘 GitHub`select`[]🚀 手动切换`[]DIRECT`[]♻️ 自动选择``[]🇨🇳 自建节点[]`🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 手动切换`[]DIRECT`[]♻️ 自动选择``[]🇨🇳 自建节点[]`🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=🙋 Telegram`select`[]🚀 手动切换`[]DIRECT`[]♻️ 自动选择``[]🇨🇳 自建节点[]`🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=📀 流媒体`select`[]🚀 手动切换`[]DIRECT`[]♻️ 自动选择``[]🇨🇳 自建节点[]`🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=🌍 国外`select`[]🚀 手动切换`[]DIRECT`[]♻️ 自动选择``[]🇨🇳 自建节点[]`🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+;custom_proxy_group=➡️ 国内`select`[]🚀 手动切换`[]DIRECT`[]♻️ 自动选择``[]🇨🇳 自建节点[]`🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 手动切换`[]♻️ 自动选择``[]🇨🇳 自建节点[]`🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动切换`[]DIRECT`[]♻️ 自动选择``[]🇨🇳 自建节点[]`🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
 
 ;3、节点组
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇨🇳 台湾节点`select`(233boy|233|TW|Taiwan)
+custom_proxy_group=🇨🇳 自建节点`select`(233boy|233)
 custom_proxy_group=其他-自动`url-test`(波|柬|斯|尼|也|克|比|尔|立|冰|秘|耳|利|埃|希|斯|孟|芬|阿|愛|澳|英|德|南|意|法|拿|墨|印|越|俄|瑞|智|荷|比|巴|沙|班|泰|德|烏|以|Australia|Konghwaguk)`http://www.gstatic.com/generate_204`60,150
 
 ;4、启用规则集
