--- a/clash.ini
+++ b/clash.ini
@@ -32,24 +32,24 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;ruleset=➡️ 国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=🚀 手动切换`select`[]♻️ 自动选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
+custom_proxy_group=🚀 手动切换`select`[]♻️ 自动选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]其他`[]DIRECT
 custom_proxy_group=🇨🇳 搬瓦工`select`(233boy|233)
 ;custom_proxy_group=🚀 手动切换`select`.*`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=👽 AI`select`[]🚀 手动切换`.*`[]DIRECT
 custom_proxy_group=👽 AI`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=🎮 游戏平台`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=📘 GitHub`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=🙋 Telegram`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=📀 流媒体`select`[]🚀 手动切换`.*`[]DIRECT
-custom_proxy_group=🌍 国外`select`[]🚀 手动切换`.*`[]DIRECT
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎮 游戏平台`select`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📘 GitHub`select`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🙋 Telegram`select`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📀 流媒体`select`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🌍 国外`select`[]🚀 手动切换`[]DIRECT
 ;custom_proxy_group=➡️ 国内`select`[]DIRECT`[]🚀 手动切换`.*
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 手动切换`.*
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动切换`.*`[]DIRECT
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动切换`[]DIRECT
 
 ;3、节点组
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
