--- a/clash.ini
+++ b/clash.ini
@@ -41,7 +41,7 @@ custom_proxy_group=🇨🇳 搬瓦工`select`(233boy|233)
 ;custom_proxy_group=🚀 手动切换`select`.*`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=StockX&Goat`select`[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=Footsites`select``[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
+custom_proxy_group=Footsites`select`[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
 custom_proxy_group=FinishLine`select``[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
 custom_proxy_group=Dicks`select``[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
 custom_proxy_group=👽 AI`select`[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
