--- a/clash.ini
+++ b/clash.ini
@@ -1,8 +1,8 @@
 ;1、域名组
-ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcX%26Alias.list
-ruleset=Footsites,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Footsites.list
-ruleset=FinishLine,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/FNL.list
-ruleset=Dicks,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Dicks.list
+;ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcX%26Alias.list
+;ruleset=Footsites,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Footsites.list
+;ruleset=FinishLine,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/FNL.list
+;ruleset=Dicks,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Dicks.list
 ruleset=👽 AI,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/AI.list
 ruleset=👽 AI,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/AI2.list
 ruleset=📘 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
@@ -40,10 +40,10 @@ custom_proxy_group=🚀 手动切换`select`[]♻️ 自动选择`[]🇨🇳 搬
 custom_proxy_group=🇨🇳 搬瓦工`select`(233boy|233)
 ;custom_proxy_group=🚀 手动切换`select`.*`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=StockX&Goat`select`[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=Footsites`select`[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=FinishLine`select`[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=Dicks`select``[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
+;custom_proxy_group=StockX&Goat`select`[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
+;custom_proxy_group=Footsites`select`[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
+;custom_proxy_group=FinishLine`select`[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
+;custom_proxy_group=Dicks`select`[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
 custom_proxy_group=👽 AI`select`[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 手动切换`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
