--- a/Clash.ini
+++ b/Clash.ini
@@ -43,27 +43,29 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;ruleset=➡️ 国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]自定义1️⃣`[]自定义2️⃣`[]其他`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]1️⃣ 自定义`[]2️⃣ 自定义`[]其他`[]DIRECT
 custom_proxy_group=🇨🇳 搬瓦工`select`(233boy|233)
+custom_proxy_group=1️⃣ 自定义`select`.*
+custom_proxy_group=2️⃣ 自定义`select`.*
 ;custom_proxy_group=🚀 节点选择`select`.*`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=StockX&Goat`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]自定义1️⃣`[]自定义2️⃣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=Footsites`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]自定义1️⃣`[]自定义2️⃣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=FinishLine`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]自定义1️⃣`[]自定义2️⃣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=Dicks`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]自定义1️⃣`[]自定义2️⃣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=👽 AI`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]自定义1️⃣`[]自定义2️⃣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]自定义1️⃣`[]自定义2️⃣`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]自定义1️⃣`[]自定义2️⃣`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]自定义1️⃣`[]自定义2️⃣`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]自定义1️⃣`[]自定义2️⃣`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-;custom_proxy_group=📘 GitHub`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]自定义1️⃣`[]自定义2️⃣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-;custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]自定义1️⃣`[]自定义2️⃣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-;custom_proxy_group=🙋 Telegram`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]自定义1️⃣`[]自定义2️⃣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-;custom_proxy_group=📀 流媒体`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]自定义1️⃣`[]自定义2️⃣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=🌍 国外`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]自定义1️⃣`[]自定义2️⃣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=StockX&Goat`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=Footsites`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=FinishLine`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=Dicks`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=👽 AI`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+;custom_proxy_group=📘 GitHub`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+;custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+;custom_proxy_group=🙋 Telegram`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+;custom_proxy_group=📀 流媒体`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=🌍 国外`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 ;custom_proxy_group=➡️ 国内`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]自定义1️⃣`[]自定义2️⃣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 
 ;3、节点组
 ;custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
@@ -72,8 +74,7 @@ custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉
 custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 custom_proxy_group=🏠 家宽`select`(家宽|家)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=其他`select`(波|柬|斯|尼|也|克|比|尔|立|冰|秘|耳|利|埃|希|斯|孟|芬|阿|愛|澳|英|德|南|意|法|拿|墨|印|越|俄|瑞|智|荷|比|巴|沙|班|泰|德|烏|以|Australia|Konghwaguk)
-custom_proxy_group=自定义1️⃣`select`.*
-custom_proxy_group=自定义2️⃣`select`.*
+
 
 
 
