--- a/isp.ini
+++ b/isp.ini
@@ -1,6 +1,9 @@
-
-
-
 IP-CIDR,23.187.232.200/29,no-resolve
 IP-CIDR,23.187.232.208/28,no-resolve
 IP-CIDR,23.187.232.224/29,no-resolve
+IP-CIDR,23.188.136.52/30,no-resolve
+IP-CIDR,23.188.136.56/29,no-resolve
+IP-CIDR,23.188.136.64/29,no-resolve
+IP-CIDR,23.188.136.72/30,no-resolve
+IP-CIDR,23.188.136.76/32,no-resolve
+
