--- a/Clash.ini
+++ b/Clash.ini
@@ -1,4 +1,4 @@
-;1、域名组..。。。
+;1、域名组..。。。。。。
 ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcXAlias.list
 ruleset=Footsites,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Footsites.list
 ruleset=FinishLine,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/FNL.list
@@ -6,8 +6,7 @@ ruleset=Dicks,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/mai
 ruleset=Hibbett,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/hibbett.list
 ruleset=Nike,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/nike.list
 ruleset=isp,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/isp.list
-ruleset=👽 AI,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/AI.list
-ruleset=👽 AI,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/AI2.list
+ruleset=👽 AI,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/AI.list
 ;ruleset=📘 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
 ;ruleset=👯‍♂️ TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
 ;ruleset=🙋 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
