--- a/Clash.ini
+++ b/Clash.ini
@@ -1,4 +1,4 @@
-;1、域名组。。。。。。。。。。。。
+;1、域名组。
 ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcXAlias.list
 ruleset=Footsites,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Footsites.list
 ruleset=FinishLine,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/FNL.list
@@ -60,7 +60,7 @@ custom_proxy_group=Nike`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工
 custom_proxy_group=Hibbett`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=isp`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=👽 AI`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=👯‍♂️ TikTok`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
