--- a/Clash.ini
+++ b/Clash.ini
@@ -45,7 +45,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;ruleset=➡️ 国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇨🇳 搬瓦工`[]📡 Rich`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]1️⃣ 自定义`[]2️⃣ 自定义`[]其他`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇨🇳 搬瓦工`[]📡 Rich`[]📡 Home`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]1️⃣ 自定义`[]2️⃣ 自定义`[]其他`[]DIRECT
 custom_proxy_group=🇨🇳 搬瓦工`select`(233boy|233)
 custom_proxy_group=📡 Rich`select`(rich|Rich)
 custom_proxy_group=📡 Home`select`(home|Home)
