--- a/Clash.ini
+++ b/Clash.ini
@@ -1,5 +1,5 @@
 ;11域名组...。。。。。
-ruleset=aycd,https://github.com/callejoncho/Clash/blob/main/aycd.list
+ruleset=aycd,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/aycd.list
 ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcXAlias.list
 ruleset=Footsites,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Footsites.list
 ruleset=FinishLine,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/FNL.list
