--- a/Clash.ini
+++ b/Clash.ini
@@ -52,7 +52,7 @@ custom_proxy_group=🇨🇳 搬瓦工`select`(233boy|233)
 custom_proxy_group=📡 Home`select`(home|Home)
 custom_proxy_group=📡 ISP`select`(isp|ISP)
 custom_proxy_group=📡 GoodIP`select`(goodip|GOODIP)
-custom_proxy_group=📡 NiceIP`select`(niceip)
+custom_proxy_group=📡 NiceIP`select`(niceip|NICEIP)
 custom_proxy_group=1️⃣ 自定义`select`.*
 custom_proxy_group=2️⃣ 自定义`select`.*
 custom_proxy_group=3️⃣ 自定义`select`.*
