--- a/Clash.ini
+++ b/Clash.ini
@@ -1,4 +1,4 @@
-;域名组。。。。。。。。。。。。
+;链接域名组。。。。。。。。。。。。
 ;ruleset=aycd,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/aycd.list
 ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcX-Alias.list
 ruleset=Footsites,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Footsites.list
