--- a/Clash.ini
+++ b/Clash.ini
@@ -57,6 +57,7 @@ custom_proxy_group=1️⃣ 自定义`select`.*
 custom_proxy_group=2️⃣ 自定义`select`.*
 custom_proxy_group=3️⃣ 自定义`select`.*
 custom_proxy_group=4️⃣ 自定义`select`.*
+custom_proxy_group=5️⃣ 自定义`select`.*
 ;custom_proxy_group=🚀 节点选择`select`.*`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=加速`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
