--- a/Clash.ini
+++ b/Clash.ini
@@ -1,4 +1,4 @@
-;11111.域名组。。。。
+;1域名组
 ;ruleset=aycd,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/aycd.list
 ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcX-Alias.list
 ruleset=加速,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/ISPs.list
