--- a/Clash.ini
+++ b/Clash.ini
@@ -1,4 +1,4 @@
-;1111域名组。。.。
+;11域名组。。.。
 ;ruleset=aycd,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/aycd.list
 ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcX-Alias.list
 ruleset=AdsPower,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/ISPs.list
@@ -47,29 +47,29 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;2、策略组（域名组-节点组）
 custom_proxy_group=AdsPower`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-;custom_proxy_group=aycd`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-custom_proxy_group=StockX&Goat`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-custom_proxy_group=Footsites`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-custom_proxy_group=FinishLine`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-custom_proxy_group=Dicks`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-custom_proxy_group=Nike`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-custom_proxy_group=Arcteryx&Hibbett`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-custom_proxy_group=👽 AI`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他`select`.*
-custom_proxy_group=TikTok`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他`select`.*
+;custom_proxy_group=aycd`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--📡 THE-PLAN`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
+custom_proxy_group=StockX&Goat`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--📡 THE-PLAN`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
+custom_proxy_group=Footsites`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--📡 THE-PLAN`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
+custom_proxy_group=FinishLine`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--📡 THE-PLAN`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
+custom_proxy_group=Dicks`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--📡 THE-PLAN`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
+custom_proxy_group=Nike`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--📡 THE-PLAN`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
+custom_proxy_group=Arcteryx&Hibbett`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--📡 THE-PLAN`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
+custom_proxy_group=👽 AI`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--📡 THE-PLAN`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他`select`.*
+custom_proxy_group=TikTok`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--📡 THE-PLAN`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他`select`.*
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🚀 节点选择`[]IP--🇨🇳 搬瓦工`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🚀 节点选择`[]IP--🇨🇳 搬瓦工`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🚀 节点选择`[]IP--🇨🇳 搬瓦工`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🚀 节点选择`[]IP--🇨🇳 搬瓦工`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 ;custom_proxy_group=📘 GitHub`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 ;custom_proxy_group=🙋 Telegram`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-custom_proxy_group=📀 流媒体`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-custom_proxy_group=🌍 国外`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
+custom_proxy_group=📀 流媒体`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--📡 THE-PLAN`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
+custom_proxy_group=🌍 国外`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--📡 THE-PLAN`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 ;custom_proxy_group=➡️ 国内`select`[]DIRECT`[]IP--🚀 节点选择`[]IP--🇨🇳 搬瓦工`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]IP--🚀 节点选择`[]IP--🇨🇳 搬瓦工`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 custom_proxy_group=🐟 漏网之鱼`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🇨🇳 搬瓦工`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 
 ;3、节点组
-custom_proxy_group=IP--🚀 节点选择`select`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--其他`[]DIRECT
+custom_proxy_group=IP--🚀 节点选择`select`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--📡 THE-PLAN`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--其他`[]DIRECT
 custom_proxy_group=IP--🇨🇳 搬瓦工`select`(233boy|搬瓦工)
 ;custom_proxy_group=IP--🚀 节点选择`select`.*`[]DIRECT
 ;custom_proxy_group=IP--♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
@@ -83,6 +83,7 @@ custom_proxy_group=IP--📡 US1_ISP`select`(home|Home)
 custom_proxy_group=IP--📡 US2_ISP`select`(isp|ISP)
 custom_proxy_group=IP--📡 US3_ISP`select`(goodip|GOODIP)
 custom_proxy_group=IP--📡 US4_ISP`select`(niceip|NICEIP)
+custom_proxy_group=IP--📡 THE-PLAN`select`(THE-PLAN|THE-PLAN-)
 custom_proxy_group=IP--1️⃣ 自定义`select`.*
 custom_proxy_group=IP--2️⃣ 自定义`select`.*
 custom_proxy_group=IP--3️⃣ 自定义`select`.*
