--- a/Clash.ini
+++ b/Clash.ini
@@ -45,8 +45,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 ;ruleset=➡️ 国内,[]FINAL
 
-custom_proxy_group=IP--🚀 节点选择`select`[]IP--🚀 自建节点- Group 1️⃣`[]IP--🚀 自建节点- Group 2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-
+custom_proxy_group=IP--🚀 节点选择`select`[]IP--🇨🇳 搬瓦工`[]IP--📡 US1_ISP`[]IP--📡 US2_ISP`[]IP--📡 US3_ISP`[]IP--📡 US4_ISP`[]IP--📡 THE-PLAN`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--1️⃣ 自定义`[]IP--2️⃣ 自定义`[]IP--3️⃣ 自定义`[]IP--4️⃣ 自定义`[]IP--5️⃣ 自定义`[]IP--6️⃣ 自定义`[]IP--其他`[]DIRECT
 
 ;2、策略组（域名组-节点组）
 custom_proxy_group=AdsPower`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🚀 自建节点- Group 1️⃣`[]IP--🚀 自建节点- Group 2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
