--- a/Clash.ini
+++ b/Clash.ini
@@ -1,4 +1,4 @@
-;11123域名组。。.。
+;113域名组。。.。
 ;ruleset=aycd,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/aycd.list
 ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcX-Alias.list
 ruleset=AdsPower,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/ISPs.list
@@ -45,7 +45,9 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 ;ruleset=➡️ 国内,[]FINAL
 
-custom_proxy_group=IP--🚀 节点选择`select`[]IP--🚀 自建节点- Group 1️⃣`[]IP--🚀 自建节点- Group 2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
+custom_proxy_group=IP--🚀 节点选择`select`[]IP--🚀 自建节点- Group 1️⃣`[]IP--🚀 自建节点- Group 2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他`(25TB|搬瓦工)
+;custom_proxy_group=IP--🚀 节点选择`select`[]IP--🚀 自建节点- Group 1️⃣`[]IP--🚀 自建节点- Group 2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
+
 ;2、策略组（域名组-节点组）
 custom_proxy_group=AdsPower`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🚀 自建节点- Group 1️⃣`[]IP--🚀 自建节点- Group 2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 ;custom_proxy_group=aycd`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🚀 自建节点- Group 1️⃣`[]IP--🚀 自建节点- Group 2️⃣`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
