--- a/Clash.ini
+++ b/Clash.ini
@@ -45,7 +45,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 ;ruleset=➡️ 国内,[]FINAL
 
-custom_proxy_group=IP--🚀 节点选择`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🚀 自建节点- Group 1️⃣`[]IP--🚀 自建节点- Group 2️⃣`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
+custom_proxy_group=IP--🚀 节点选择`select`[]DIRECT`[]IP--🚀 自建节点- Group 1️⃣`[]IP--🚀 自建节点- Group 2️⃣`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 ;custom_proxy_group=IP--🚀 节点选择`select`[]IP--🚀 自建节点- Group 1️⃣`[]IP--🚀 自建节点- Group 2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 
 ;2、策略组（域名组-节点组）
