--- a/Clash.ini
+++ b/Clash.ini
@@ -1,4 +1,4 @@
-;fsfc域名组。。.。
+;fc域名组。。.。
 ;ruleset=aycd,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/aycd.list
 ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcX-Alias.list
 ruleset=AdsPower,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/ISPs.list
@@ -45,7 +45,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 ;ruleset=➡️ 国内,[]FINAL
 
-custom_proxy_group=IP--🚀 节点选择`select`25TB|搬瓦工`[]DIRECT
+custom_proxy_group=IP--🚀 节点选择`select`25TB-US|搬瓦工`[]DIRECT`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 ;custom_proxy_group=IP--🚀 节点选择`select`[]IP--🚀 自建节点- Group 1️⃣`[]IP--🚀 自建节点- Group 2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 
 ;2、策略组（域名组-节点组）
@@ -72,8 +72,8 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]IP--🚀 节点选择`[]I
 custom_proxy_group=🐟 漏网之鱼`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--🚀 自建节点- Group 1️⃣`[]IP--🚀 自建节点- Group 2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 
 ;3、节点组
-custom_proxy_group=IP--🚀 自建节点- Group 1️⃣`select`(25TB|搬瓦工)
-custom_proxy_group=IP--🚀 自建节点- Group 2️⃣`select`(25TB|搬瓦工)
+custom_proxy_group=IP--🚀 自建节点- Group 1️⃣`select`(25TB-US|搬瓦工)
+custom_proxy_group=IP--🚀 自建节点- Group 2️⃣`select`(25TB-US|搬瓦工)
 ;custom_proxy_group=IP--🚀 节点选择`select`.*`[]DIRECT
 ;custom_proxy_group=IP--♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=IP--🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
